differes in 2m with exp_pre_ tables
